# piper-morgan-product

./: .claude-code-rules  .coverage  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .mcp.json  .npmrc  .pre-commit-config.yaml  .pytest-known-failures  2025-09-22-claude-code-log.md  404.html  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE-TESTING-GUIDE.md  COMPREHENSIVE_PM_TESTING_GUIDE.md  CONTRIBUTING.md  CURSOR-AGENT-COMBINED-VERIFICATION.md  DDD_FIX_TODO.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FILE-PLACEMENT-GUIDE.md  Makefile  PM-009-COMPLETION-SUMMARY.md  PYTHON_MODERNIZATION_OPPORTUNITIES.md  README.md  SETUP.md  alembic.ini  all_internal_links.txt  analyze_staged.sh  architect-context-query-fallback.md  async_patterns_test.py  ba.sh  backlog.json  backup_before_phase2_20251104_110245.sql  backup_before_phase2_20251104_110300.sql  baseline.txt  blog_spiral_analysis.py  blog_spiral_analysis_report.md  (+132 more)
.beads/: .gitignore  beads.base.jsonl  beads.base.meta.json  beads.left.jsonl  beads.left.meta.json  issues.jsonl
.claude/: settings.json  settings.local.json.backup  settings.local.json.backup-20250727-121227  settings.local.json.smart-permissions  smart.settings.local.json  xian.settings.local.json
.cursor/: environment.json
.github/: copilot-instructions.md
.pre-commit-hooks/: check-hallucinated-urls.py  check-init-py.sh  check-manual-tests.sh  security-check.sh
.serena/: project.yml
404/: index.html
about/: index.html  index.txt
alembic/: env.py
analysis/: content_gaps.json
analysis_code_independent/: knowledge-dependency-structures.md
analysis_cursor_independent/: evolution_patterns.md
archive/: 2025-07-25-3-code-log.md  2025-07-25-4-cursor-overloaded-failed-chat-log.md  2025-07-25-5-cursor-lpg.md  README-original-609-lines.md  README-original-from-git.md  README-original-from-git.md.bak  app_with_clarifying.py  app_with_feedback.py  spatial-taxonomy-brief.md.bak  vision-old.md.bak
blog/: index.html  index.txt
cli/: __init__.py  auth_helper.py
config/: PIPER.defaults.md  PIPER.md  PIPER.user.md.backup  PIPER.user.md.example  README.md  notion_config.py  notion_user_config.py  rotation_policy.yaml
coordination/: QUEUE-README.md  manifest.json
dev/: PERIOD-4-EXECUTIVE-SUMMARY.md  PERIOD-4-INDEX.md  PERIOD-4-QUICK-REFERENCE.md  (+2 more)
docs/: 404.html  (+43 more)
(+6987 files in other folders)
