[project]
requires-python = ">=3.11.0"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | archive
  | data_backup
  | uploads
  | web/assets
  | web/.*\.js
  | web/.*\.html
  | web/.*\.md
  | .*\.backup
  | temp_engine_update\.py
  | update_engine\.py
  | test_.*\.py
  | tests/test_.*\.py
  | fix\.py
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as requiring async event loop",
]
testpaths = ["tests"]
addopts = "--ignore=tests/archive --ignore=*/archive/*"
